fleet-mngmt/oauth-proxy/aws/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  #namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --email-domain=*
        - --upstream=file:///dev/null
        - --http-address=0.0.0.0:4180
        - --login-url=https://cs-kibana-demo.auth.us-east-1.amazoncognito.com/login
        - --redirect-url=https://auth.fleetman.com/oauth2/idpresponse
        - --oidc-issuer-url=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_apmY9hzSz
        - --oidc-jwks-url=https://cognito-idp.us-east-1.amazonaws.com/us-east-1_apmY9hzSz/.well-known/jwks.json
        - --redeem-url=https://cs-kibana-demo.auth.us-east-1.amazoncognito.com/oauth2/token
        - --skip-oidc-discovery
        - --scope=openid
        - --cookie-secure=false
        - --cookie-domain=localhost
        # Register a new application
        # https://github.com/settings/applications/new
        image: quay.io/pusher/oauth2_proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  #namespace: kube-system
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
